<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".landingpage.LandingFragment">

        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="@string/search"
            android:hint="@string/str_btn"
            android:inputType="text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioScroll" />

        <HorizontalScrollView
            android:id="@+id/radioScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closeButton">

            <RadioGroup
                android:id="@+id/searchOptionRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionArtistname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action1" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionTrackname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action2" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionCollectionname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action3" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionCollectionprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action4" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionReleasedate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action5" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionArtworkurl100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action6" />

            </RadioGroup>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/radioScrollSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <RadioGroup
                android:id="@+id/sortOptionRadioGroupSort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionArtistnameSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action1" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionTracknameSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action2" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionCollectionnameSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action3" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionCollectionpriceSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action4" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionReleasedateSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action5" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/actionArtworkurl100Sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/action6" />

            </RadioGroup>
        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/closeButtonSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_button_sorting"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/radioScrollSort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_button"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{resource.status == Status.LOADING?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTimeLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:nestedScrollingEnabled="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/closeButtonSort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchEdit"
            tools:listitem="@layout/track_items" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="com.example.itunessearch.model.Status" />

        <import type="android.view.View" />

        <variable
            name="resource"
            type="com.example.itunessearch.model.Resource" />

        <variable
            name="viewModel"
            type="com.example.itunessearch.landingpage.LandingPageViewModal" />
    </data>
</layout>